syntax = "proto3";

package chatroom;

import "google/protobuf/timestamp.proto";

message RoomRegistrationRequest {
    string room_name = 1;
}

message RoomRegistrationResponse {
    int32 room_id = 1;
}

message NewsUpdate {
    google.protobuf.Timestamp timestamp = 1;
    string news_title = 2;
    string news_content = 3;
}

message NewsStreamStatus {
    bool is_successful = 1;
}

service ChatRoom {
    rpc RegisterToRoom(RoomRegistrationRequest) returns (RoomRegistrationResponse);
    rpc SendNewsUpdate(stream NewsUpdate) returns (NewsStreamStatus);
}